--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/style.css
@@ -14,13 +14,28 @@ body {
   display: flex;
 }
 
+/* .logo-container img {
+  display: flex;
+  justify-content: flex-end;
+  background-color: red;
+
+
+
+} */
+
 .logo-container {
   display: flex;
   justify-content: center;
+  flex-basis: 268px;
+  order: -1;
+
 }
 
 .menu-container {
   display: flex;
+  flex-basis: 500px;
+  flex-grow: 1;
+  align-self: center;
 }
 
 .menu-container ul {
