--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/style.css
@@ -9,13 +9,7 @@ body {
   width: 100vw;
 }
 
-@media screen and (min-width: 500px) {
-  .card:nth-of-type(1) {
-    /* visibility: hidden; */
-    display: flex;
-  }
-  
-}
+
 
 h1 {
   font-family: Cinzel, serif;
@@ -72,4 +66,36 @@ p strong {
 
 .card:nth-of-type(3) {
   background-color: #41197f;
+}
+
+@media (min-width: 500px) {
+  .card:nth-of-type(1) {
+    display: block;
+  }  
+}
+
+/* 2 - A segunda div só poderá aparecer apenas 
+se a largura estiver entre 600px e 1000px . */
+
+@media (min-width: 600px) and (max-width: 1000px) {
+  .card:nth-of-type(2) {
+    display: block;
+  }
+}
+
+/* @media (min-width: 650px) , (max-width: 950px) {
+  .card:nth-of-type(2) {
+    display: block;
+} */
+
+@media (max-width: 650px) {
+  .card:nth-of-type(3) {
+    display: block;
+  }
+}
+
+@media (min-width: 950px) {
+  .card:nth-of-type(3) {
+    display: block;
+  }
 }
